[tool.poetry]
name = "prisma-task"
version = "0.1.0"
description = ""
authors = ["Karim Moradi <kmoradi.ai@gmail.com>"]
readme = "README.md"
#packages = [{include = "prisma_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
requests = "^2.28.2"
currencies = "^2020.12.12"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
python-dotenv = "^0.21.1"
pytest = "^7.2.1"
httpx = "^0.23.3"
pre-commit = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
